--- a/fingerprint-dialog-compat/src/main/AndroidManifest.xml
+++ b/fingerprint-dialog-compat/src/main/AndroidManifest.xml
@@ -14,5 +14,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kevalpatel2106.fingerprintdialog">
 
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
 </manifest>
